# nhexonline

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  LICENSE  README.md  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  vite.config.mjs
main/: admin.py  apps.py  context_processors.py  filesize.py  forms.py  human_readable_size.py  models.py  signals.py  tests.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_user_storage_quota.py  0003_token_back_image_rect_token_front_image_rect.py  0004_chair_namedinvitation.py  0005_userdiskquota_remove_user_groups_and_more.py  0006_userdiskquota_user_delete_user.py  0007_rename_storage_quota_userdiskquota_value.py  0008_army_private_alter_resource_file.py  0009_alter_table_id.py  0010_alter_table_owner.py  0011_board_table_board.py  0012_link.py  0013_emote.py  0014_army_readonly.py  0015_publicationrequest.py  0016_alter_army_id_alter_board_id_alter_chair_id_and_more.py  0017_army_utility.py  0018_emotealternativeimage.py  0019_token_additional_info.py  0020_alter_token_multiplicity.py  0021_army_keyshortcut.py  0022_alter_link_options_link_my_order.py  0024_footerlink.py  (+3 more)
nhex/: asgi.py  settings.py  urls.py  wsgi.py
nhex_static/: .gitignore  index.html  main.js  package-lock.json  package.json  play.html  style.css  vite.config.js
table-client/: .eslintrc.json  package-lock.json  package.json
tss/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  table_server.js
users/: forms.py  tests.py  urls.py  views.py
(+97 files in other folders)
